objects/delphiDemo__TImeMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To store the max and min time of the opportunity.</description>
    <fields>
        <fullName>delphiDemo__Max_Time__c</fullName>
        <description>Store the max time of the opportunity.</description>
        <inlineHelpText>Store the max time of the opportunity.</inlineHelpText>
        <label>Max Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Mean__c</fullName>
        <label>Mean</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Min_Time__c</fullName>
        <description>Store the min time for the opportunity.</description>
        <inlineHelpText>Store the min time for the opportunity.</inlineHelpText>
        <label>Min Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Standard_Deviation__c</fullName>
        <label>Standard Deviation</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>Time Mapping</label>
</CustomObject>